added Basic html code for home page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>main page-Iranian Antiques Auction</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <header>
+      <div>
+        <h1>Iranian Antiques Auction Company</h1>
+      </div>
+      <div>
+        <section>
+          <input type="search" placeholder="Search" />
+          <button type="button"></button>
+        </section>
+        <section>
+          <span>Login</span>
+          <button><a href="#">Sellers</a></button>
+          <button><a href="#">clients</a></button>
+        </section>
+      </div>
+    </header>
+    <main>
+      <div>
+        <a href="#"
+          ><figure>
+            <img src="" alt="" />
+            <figcaption></figcaption></figure
+        ></a>
+        <a href="#"
+          ><figure>
+            <img src="" alt="" />
+            <figcaption></figcaption></figure
+        ></a>
+        <a href="#"
+          ><figure>
+            <img src="" alt="" />
+            <figcaption></figcaption></figure
+        ></a>
+        <a href="#"
+          ><figure>
+            <img src="" alt="" />
+            <figcaption></figcaption></figure
+        ></a>
+      </div>
+      <div>
+        <div>
+            <label for=""></label>
+            <input type="email">
+        </div>
+      </div>
+      <aside>
+        <nav>
+            <div><a href=""></a></div>
+            <div><a href=""></a></div>
+            <div><a href=""></a></div>
+            <div><a href=""></a></div>
+            <div><a href=""></a></div>
+            <div><a href=""></a></div>
+            <div><a href=""></a></div>
+        </nav>
+      </aside>
+    </main>
+    <footer></footer>
+  </body>
 </html>
