added some css changes on home page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="title">
         <h1>Iranian Antiques Auction Company</h1>
       </div>
-      <div>
+      <div class="navbar">
         <section>
           <input type="search" placeholder="Search" />
           <button type="button"></button>
@@ -25,10 +25,10 @@
       </div>
     </header>
     <main>
-      <div>
+      <div class="options">
         <a href="#"
           ><figure>
-            <img src="" alt="" />
+            <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
             <figcaption></figcaption></figure
         ></a>
         <a href="#"
@@ -49,19 +49,19 @@
       </div>
       <div>
         <div>
-            <label for=""></label>
-            <input type="email">
+          <label for=""></label>
+          <input type="email" />
         </div>
       </div>
       <aside>
         <nav>
-            <div><a href=""></a></div>
-            <div><a href=""></a></div>
-            <div><a href=""></a></div>
-            <div><a href=""></a></div>
-            <div><a href=""></a></div>
-            <div><a href=""></a></div>
-            <div><a href=""></a></div>
+          <div><a href=""></a></div>
+          <div><a href=""></a></div>
+          <div><a href=""></a></div>
+          <div><a href=""></a></div>
+          <div><a href=""></a></div>
+          <div><a href=""></a></div>
+          <div><a href=""></a></div>
         </nav>
       </aside>
     </main>
