added some colors and some changes on home page

--- a/index.html
+++ b/index.html
@@ -4,49 +4,69 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>main page-Iranian Antiques Auction</title>
+    <title>home page-Iranian Antiques Auction</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+
+
+
     <header>
+
       <div class="title">
         <h1>Iranian Antiques Auction Company</h1>
-      </div>
-      <div class="navbar">
-        <section>
-          <input type="search" placeholder="Search" />
-          <button type="button"></button>
-        </section>
-        <section>
+        <div class="log1">
           <span>Login</span>
-          <button><a href="#">Sellers</a></button>
-          <button><a href="#">clients</a></button>
-        </section>
+          <div class="log2">
+            <button><a href="#">Sellers</a></button>
+            <button><a href="#">clients</a></button>
+          </div>
+        </div>
       </div>
+
+
+
+      <nav class="navbar">
+        <a href="#">Home</a>
+        <a href="#">Aboute us</a>
+        <a href="#">content us</a>
+        <a href="#">New</a>
+        <a href="#">Sold</a>
+      </nav>
+
     </header>
+
+
+
+
+
     <main>
-      <div class="options">
+
+      <nav class="options">
         <a href="#"
-          ><figure>
+          >
             <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
-            <figcaption></figcaption></figure
-        ></a>
+            <span>Carpet</span>
+        </a>
         <a href="#"
-          ><figure>
-            <img src="" alt="" />
-            <figcaption></figcaption></figure
-        ></a>
+          >
+            <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
+            <span>Carpet</span>
+        </a>
         <a href="#"
-          ><figure>
-            <img src="" alt="" />
-            <figcaption></figcaption></figure
-        ></a>
+          >
+            <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
+            <span>Carpet</span>
+        </a>
         <a href="#"
-          ><figure>
-            <img src="" alt="" />
-            <figcaption></figcaption></figure
-        ></a>
-      </div>
+          >
+            <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
+            <span>Carpet</span>
+        </a>
+      </nav>
+
+
+
       <div>
         <div>
           <label for=""></label>
