--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="title">
         <h1>Iranian Antiques Auction Company</h1>
         <div class="log1">
-          <span>Login</span>
+          <span>LOGIN / REGISTER</span>
           <div class="log2">
             <button><a href="#">Sellers</a></button>
             <button><a href="#">clients</a></button>
