--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-
-
-
     <header>
-
       <div class="title">
         <h1>Iranian Antiques Auction Company</h1>
         <div class="log1">
@@ -24,8 +20,6 @@
         </div>
       </div>
 
-
-
       <nav class="navbar">
         <a href="#">Home</a>
         <a href="#">Aboute us</a>
@@ -33,46 +27,38 @@
         <a href="#">New</a>
         <a href="#">Sold</a>
       </nav>
-
     </header>
 
-
-
-
-
     <main>
-
+      <div class="hpimg">
+        <img src="./img/home-page-img.jpg" alt="img" />
+      </div>
       <nav class="options">
-        <a href="#"
-          >
-            <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
-            <span>Carpet</span>
+        <a href="#">
+          <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
+          <span>Carpet</span>
         </a>
-        <a href="#"
-          >
-            <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
-            <span>Carpet</span>
+        <a href="#">
+          <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
+          <span>Carpet</span>
         </a>
-        <a href="#"
-          >
-            <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
-            <span>Carpet</span>
+        <a href="#">
+          <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
+          <span>Carpet</span>
         </a>
-        <a href="#"
-          >
-            <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
-            <span>Carpet</span>
+        <a href="#">
+          <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
+          <span>Carpet</span>
         </a>
       </nav>
 
-
-
-      <div>
+      <div class="entemail">
         <div>
           <label for=""></label>
           <input type="email" />
         </div>
       </div>
+
       <aside>
         <nav>
           <div><a href=""></a></div>
