--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     <main>
       <div class="hpimg">
-        <img src="./img/home-page-img.jpg" alt="img" />
+        <img src="./img/home-page-img.jpg" alt="img" class="hpimg"/>
       </div>
-      <nav class="options">
+      <section class="options">
         <a href="#">
           <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
           <span>Carpet</span>
@@ -50,26 +50,7 @@
           <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
           <span>Carpet</span>
         </a>
-      </nav>
-
-      <div class="entemail">
-        <div>
-          <label for=""></label>
-          <input type="email" />
-        </div>
-      </div>
-
-      <aside>
-        <nav>
-          <div><a href=""></a></div>
-          <div><a href=""></a></div>
-          <div><a href=""></a></div>
-          <div><a href=""></a></div>
-          <div><a href=""></a></div>
-          <div><a href=""></a></div>
-          <div><a href=""></a></div>
-        </nav>
-      </aside>
+      </section>
     </main>
     <footer></footer>
   </body>
