Almost complete the home page

--- a/index.html
+++ b/index.html
@@ -19,19 +19,18 @@
           </div>
         </div>
       </div>
-
-      <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#">Aboute us</a>
-        <a href="#">content us</a>
-        <a href="#">New</a>
-        <a href="#">Sold</a>
-      </nav>
     </header>
-
+    <nav class="navbar">
+      <a href="#">Home</a>
+      <a href="#">Aboute us</a>
+      <a href="#">content us</a>
+      <a href="#">New</a>
+      <a href="#">Sold</a>
+      <a href="#entemail">mailing list</a>
+    </nav>
     <main>
       <div class="hpimg">
-        <img src="./img/home-page-img.jpg" alt="img" class="hpimg"/>
+        <img src="./img/home-page-img.jpg" alt="img" class="hpimg" />
       </div>
       <section class="options">
         <a href="#">
@@ -51,6 +50,23 @@
           <span>Carpet</span>
         </a>
       </section>
+      <!-- top button -->
+      <section class="entemail" id="entemail">
+        <label for="email">Join our mailing list</label>
+        <form>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Enter email addres"
+          />
+          <button>sign up today</button>
+        </form>
+      </section>
+      <!-- tabel for news -> date/link/descriptiom/number of motaghazi... -->
+      <!-- Aboute us -->
+      <!-- new shopping -->
+      <!-- sold -->
     </main>
     <footer></footer>
   </body>
