The last steps of the home page

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     </header>
     <nav class="navbar">
       <a href="#">Home</a>
+      <a href="#newstable">New</a>
+      <a href="#entemail">mailing list</a>
       <a href="#">Aboute us</a>
       <a href="#">content us</a>
-      <a href="#">New</a>
       <a href="#">Sold</a>
-      <a href="#entemail">mailing list</a>
     </nav>
     <main>
       <div class="hpimg">
@@ -35,15 +35,15 @@
       <section class="options">
         <a href="#">
           <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
-          <span>Carpet</span>
+          <span class="Carpet">Carpet</span>
         </a>
         <a href="#">
-          <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
-          <span>Carpet</span>
+          <img src="./img/lighting-home page.jpg" alt="Persian lighting" />
+          <span class="lighting">lighting</span>
         </a>
         <a href="#">
-          <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
-          <span>Carpet</span>
+          <img src="./img/Jewellery-home-page.jpg" alt="Persian Jewellery" />
+          <span class="Jewellery">Jewellery</span>
         </a>
         <a href="#">
           <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
@@ -63,9 +63,76 @@
           <button>sign up today</button>
         </form>
       </section>
-      <!-- tabel for news -> date/link/descriptiom/number of motaghazi... -->
-      <!-- Aboute us -->
-      <!-- new shopping -->
+      <section class="newstable" id="newstable">
+        <h2>NEW</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>order</th>
+              <th>Name</th>
+              <th>Description</th>
+              <th>applicants</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Royal Diamond Gem Ring</td>
+              <td>42 diamonds worked... <a href="#">more</a></td>
+              <td>11</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Emerald necklace and diamond border</td>
+              <td>36 dimonds worked whit an emerald... <a href="#">more</a></td>
+              <td>48</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Glass jars</td>
+              <td>Made in 1353 and limited number... <a href="#">more</a></td>
+              <td>25</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Gramophone model x</td>
+              <td>Made in England in 1950... <a href="#">more</a></td>
+              <td>53</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>Nain carpet</td>
+              <td>Selling a pair made by Nain... <a href="#">more</a></td>
+              <td>28</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <section class="shop">
+        <div>
+          <span class="MARGATE">MARGATE SHOP OPENING</span>
+          <p>
+            This week, after nearly 5 long and hard years, Samin Raja of LJW
+            Antiques opens her shop and it's not just any old shop. It is a
+            triple fronted shop window building, with accommodation above where
+            Samin resides and she has renovated, or should we say, re-built the
+            whole thing from top to bottom - or in Samin's case, bottom to top,
+            as you will read on her Instagram post which the tab below links to,
+            so you can enjoy it yourself. Jane will be visiting this week and
+            we'll bring you more, but in the meantime, if you fancy a trip to
+            Margate, please do pop in from Friday 14th June and show your
+            support and shake the hand of a woman who never gave up on his
+            dream.
+          </p>
+          <button>view...</button>
+        </div>
+        <img src="./img/shop-home-page.png" alt="shop" />
+      </section>
+      <section id="abuotus">
+        <span></span>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui cum vitae quis optio, aliquid consequuntur sit quisquam alias tempore veritatis vero numquam mollitia aspernatur repudiandae ea. Dolore quos enim aliquid quasi, quae voluptatum esse corrupti incidunt fugit iste eum sapiente excepturi sed voluptatem accusantium dignissimos, aperiam veniam mollitia? Nemo excepturi doloremque minus fugit beatae, commodi rerum quod rem quisquam repudiandae numquam. Accusamus nihil doloribus, voluptate aliquid est delectus deserunt vel possimus iure quisquam. Repellendus delectus animi, consectetur adipisci explicabo vel fugiat repellat deleniti! Excepturi natus veniam omnis doloremque fuga, consequuntur provident laboriosam nam, neque laborum earum hic ipsa voluptates ab.</p>
+        <img src="" alt="">
+      </section>
       <!-- sold -->
     </main>
     <footer></footer>
