added aboute us

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="#">Home</a>
       <a href="#newstable">New</a>
       <a href="#entemail">mailing list</a>
-      <a href="#">Aboute us</a>
+      <a href="#abuotus">Aboute us</a>
       <a href="#">content us</a>
       <a href="#">Sold</a>
     </nav>
@@ -128,12 +128,33 @@
         </div>
         <img src="./img/shop-home-page.png" alt="shop" />
       </section>
-      <section id="abuotus">
-        <span></span>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui cum vitae quis optio, aliquid consequuntur sit quisquam alias tempore veritatis vero numquam mollitia aspernatur repudiandae ea. Dolore quos enim aliquid quasi, quae voluptatum esse corrupti incidunt fugit iste eum sapiente excepturi sed voluptatem accusantium dignissimos, aperiam veniam mollitia? Nemo excepturi doloremque minus fugit beatae, commodi rerum quod rem quisquam repudiandae numquam. Accusamus nihil doloribus, voluptate aliquid est delectus deserunt vel possimus iure quisquam. Repellendus delectus animi, consectetur adipisci explicabo vel fugiat repellat deleniti! Excepturi natus veniam omnis doloremque fuga, consequuntur provident laboriosam nam, neque laborum earum hic ipsa voluptates ab.</p>
-        <img src="" alt="">
-      </section>
+        <section id="abuotus">
+          <div>
+            <span>Aboute us</span>
+            <p>
+              Iranian Antiques Company was founded in 1990 by Samin Raja. In
+              this company, valuable Iranian goods and antiques are displayed
+              and auctioned. The purpose of establishing this company is to give
+              importance to the value of Iranian antiques and precious objects
+              and to preserve the authentic Iranian culture. This company
+              started its work in Isfahan city and in 2006 opened branches in
+              Tehran, Shiraz and Tabriz. You can purchase an entry ticket to the
+              exhibition by viewing the products on the site. You can also
+              register as a buyer so that the date and place of the auction of
+              the desired products will be sent to you!
+            </p>
+          </div>
+          <img src="./img/about us-home-page.jpg" alt="about us" />
+        </section>
+        <section class="photo">
+          <span
+            >We need a professional advertising photographer to shoot our
+            products!</span
+          >
+          <img src="./img/photography-home-page.jpg" alt="photography" />
+        </section>
       <!-- sold -->
+      <!-- need a phtografer -->
     </main>
     <footer></footer>
   </body>
