added sold and footer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#entemail">mailing list</a>
       <a href="#abuotus">Aboute us</a>
       <a href="#">content us</a>
-      <a href="#">Sold</a>
+      <a href="#sold">Sold out</a>
     </nav>
     <main>
       <div class="hpimg">
@@ -128,34 +128,84 @@
         </div>
         <img src="./img/shop-home-page.png" alt="shop" />
       </section>
-        <section id="abuotus">
-          <div>
-            <span>Aboute us</span>
-            <p>
-              Iranian Antiques Company was founded in 1990 by Samin Raja. In
-              this company, valuable Iranian goods and antiques are displayed
-              and auctioned. The purpose of establishing this company is to give
-              importance to the value of Iranian antiques and precious objects
-              and to preserve the authentic Iranian culture. This company
-              started its work in Isfahan city and in 2006 opened branches in
-              Tehran, Shiraz and Tabriz. You can purchase an entry ticket to the
-              exhibition by viewing the products on the site. You can also
-              register as a buyer so that the date and place of the auction of
-              the desired products will be sent to you!
-            </p>
+      <section id="abuotus">
+        <div>
+          <span>Aboute us</span>
+          <p>
+            Iranian Antiques Company was founded in 1990 by Samin Raja. In this
+            company, valuable Iranian goods and antiques are displayed and
+            auctioned. The purpose of establishing this company is to give
+            importance to the value of Iranian antiques and precious objects and
+            to preserve the authentic Iranian culture. This company started its
+            work in Isfahan city and in 2006 opened branches in Tehran, Shiraz
+            and Tabriz. You can purchase an entry ticket to the exhibition by
+            viewing the products on the site. You can also register as a buyer
+            so that the date and place of the auction of the desired products
+            will be sent to you!
+          </p>
+        </div>
+        <img src="./img/about us-home-page.jpg" alt="about us" />
+      </section>
+      <section class="photo">
+        <span
+          >We need a professional advertising photographer to shoot our
+          products!</span
+        >
+        <img src="./img/photography-home-page.jpg" alt="photography" />
+      </section>
+      <section id="sold">
+        <h2>sold out</h2>
+        <div>
+          <div class="sol">
+            <img src="./img/light1.jpg" alt="light" />
+            <span>name</span>
+            <span>date of sold</span>
+            <span>last price</span>
           </div>
-          <img src="./img/about us-home-page.jpg" alt="about us" />
-        </section>
-        <section class="photo">
-          <span
-            >We need a professional advertising photographer to shoot our
-            products!</span
-          >
-          <img src="./img/photography-home-page.jpg" alt="photography" />
-        </section>
-      <!-- sold -->
-      <!-- need a phtografer -->
+          <div class="sol">
+            <img src="./img/light1.jpg" alt="light" />
+            <span>name</span>
+            <span>date of sold</span>
+            <span>last price</span>
+          </div>
+          <div class="sol">
+            <img src="./img/light1.jpg" alt="light" />
+            <span>name</span>
+            <span>date of sold</span>
+            <span>last price</span>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="foo">
+        <div>
+          <h4>BUYING ON THE Iranian Antiques Company</h4>
+          <span>HOW TO USE THIS WEBSITE</span>
+          <span>CLIENT ACCOUNT - SAVE ITEMS INTO MOOD BOARDS</span>
+          <span>LEAVE A STOCK REQUEST</span>
+          <span>PAYMENT, SHIPPING AND OTHER INFORMATION</span>
+          <span>NEW ITEMS</span>
+          <span>ARCHIVED ITEMS</span>
+        </div>
+        <div>
+          <h3>Iranian Antiques Company</h3>
+          <div></div>
+        </div>
+        <div>
+          <h4>SELLING ON THE Iranian Antiques Company</h4>
+          <span>MEMBERSHIP</span>
+          <span>WHY JOIN?</span>
+          <span>APPLY TO BECOME A SELLER</span>
+          <span>SELLING FAQ'S</span>
+        </div>
+      </div>
+      <div class="last">
+        <span
+          ><span class="s1">PRIVACY POLICY</span> | © THE Iranian Antiques Company 1990 - 2024 |
+          <span class="s1">DESIGNED BY SAMIN RAJA</span></span
+        >
+      </div>
+    </footer>
   </body>
 </html>
