added Carpet page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </header>
     <nav class="navbar">
-      <a href="#">Home</a>
+      <a href="./index.html">Home</a>
       <a href="#newstable">New</a>
       <a href="#entemail">mailing list</a>
       <a href="#abuotus">Aboute us</a>
@@ -33,7 +33,7 @@
         <img src="./img/home-page-img.jpg" alt="img" class="hpimg" />
       </div>
       <section class="options">
-        <a href="#">
+        <a href="./Carpet.html" target="_blank">
           <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
           <span class="Carpet">Carpet</span>
         </a>
