added home html

--- a/Carpet.html
+++ b/Carpet.html
@@ -21,7 +21,7 @@
       </div>
     </header>
     <nav class="navbar">
-      <a href="#">Home</a>
+      <a href="./index.html">Home</a>
       <a href="#newstable">New</a>
       <a href="#entemail">mailing list</a>
       <a href="#abuotus">Aboute us</a>
