added lighting page

--- a/Carpet.html
+++ b/Carpet.html
@@ -42,8 +42,8 @@
           <div>
             <span>Nafas Carpet</span>
             <span>2 Meter Qom Hand-Knotted Persian Runner Carpet Model Nafas</span>
-            <span>december 23, 2024</span>
-            <span>International exhibition of Qom province:Highway, Qom, Tehran, No. 1, International Exhibition of Qom province, Iran</span>
+            <span>October 29,2024</span>
+            <span>Shiraz International Exhibition: District 10, Shiraz, Fars Province, Iran</span>
             <span>start price from:€1,026.00</span>
           </div>
         </div>
