--- a/Lighting.html
+++ b/Lighting.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carpet - Iranian Antiques Auction</title>
-    <link rel="stylesheet" href="./Carpet.css" />
+    <title>Lighting - Iranian Antiques Auction</title>
+    <link rel="stylesheet" href="./Lighting.css" />
   </head>
   <body>
     <header>
@@ -21,137 +21,130 @@
       </div>
     </header>
     <nav class="navbar">
-      <a href="#">Home</a>
-      <a href="#newstable">New</a>
+      <a href="./index.html">Home</a>
+      <a href="#">New</a>
       <a href="#entemail">mailing list</a>
       <a href="#abuotus">Aboute us</a>
       <a href="#">content us</a>
       <a href="#sold">Sold out</a>
     </nav>
     <main>
-      <div>
-        <h2></h2>
-        <img src="" alt="">
+      <div class="firstmain">
+        <div>
+          <h2>Iranian</h2>
+          <h2>Lighting</h2>
+        </div>
+        <img src="./Lighting img/Lighting-img-main.jpg" alt="lighting" />
       </div>
-      <div>
+      <div class="startsell">
         <div>
-          <img src="./carpet img/Carpet1.jpg" alt="Carpet" />
+          <img src="./Lighting img/Lighting1.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Gold Lantern</span>
+            <span>Turquoise Tulip 18K Gold Lantern 75cm</span>
+            <span>October 29,2024</span>
+            <span>Shiraz International Exhibition: District 10, Shiraz, Fars Province, Iran</span>
+            <span>start price from:€394.40</span>
           </div>
         </div>
         <div>
-          <img src="./carpet img/Carpet2.jpg" alt="Carpet" />
+          <img src="./Lighting img/Lighting2.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Persian Laleh</span>
+            <span>White Persian Laleh Lamps</span>
+            <span>October 4,2024</span>
+            <span>Isfahan International Exhibition: Isfahan Province, Isfahan, Isfahan East Ring Expy, JQ4J+79C, Iran</span>
+            <span>start price from:€884.80</span>
           </div>
         </div>
         <div>
-          <img src="./carpet img/Carpet3.jpg" alt="Carpet" />
+          <img src="./Lighting img/Lighting3.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Oil Lamp</span>
+            <span>Persian Oil Lamp</span>
+            <span>October 17,2024</span>
+            <span>Tehran International ExhibitionTehran Province, Tehran, District 3, Iran</span>
+            <span>start price from:€20.88</span>
           </div>
         </div>
         <div>
-          <img src="./carpet img/Carpet4.jpg" alt="Carpet" />
+          <img src="./Lighting img/Lighting4.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Gold Lantern</span>
+            <span>Dutch Rose Tulip 18K Gold Lantern Lamp 75cm</span>
+            <span>december 6, 2024</span>
+            <span>Tabriz International Exhibition Center:: East Azerbaijan Province, Tabriz, Tabriz Int. Exhib. Rd, 2CR7+FXM, Iran</span>
+            <span>start price from:€232.00</span>
           </div>
         </div>
         <div>
-          <img src="./carpet img/Carpet5.jpg" alt="Carpet" />
+          <img src="./Lighting img/Lighting5.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Oil Lamp</span>
+            <span>Persian Pottery Oil Lamp</span>
+            <span>december 6, 2024</span>
+            <span>Tabriz International Exhibition Center:: East Azerbaijan Province, Tabriz, Tabriz Int. Exhib. Rd, 2CR7+FXM, Iran</span>
+            <span>start price from:€19.49</span>
           </div>
         </div>
         <div>
-          <img src="./carpet img/Carpet6.png" alt="Carpet" />
+          <img src="./Lighting img/Lighting6.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Minakari Lantern</span>
+            <span>Pottery Minakari Lantern 28cm</span>
+            <span>October 4,2024</span>
+            <span>Isfahan International Exhibition: Isfahan Province, Isfahan, Isfahan East Ring Expy, JQ4J+79C, Iran</span>
+            <span>start price from:€280.88</span>
           </div>
         </div>
         <div>
-          <img src="./carpet img/Carpet7.jpg" alt="Carpet" />
+          <img src="./Lighting img/Lighting7.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Gold Plated</span>
+            <span>Azure Tulip 18K Gold Plated Laleh Lamp 65cm</span>
+            <span>October 17,2024</span>
+            <span>Tehran International ExhibitionTehran Province, Tehran, District 3, Iran</span>
+            <span>start price from:€406.00</span>
           </div>
         </div>
         <div>
-          <img src="./carpet img/Carpet8.jpg" alt="Carpet" />
+          <img src="./Lighting img/Lighting8.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Gold Lantern</span>
+            <span>Turquoise Tulip 18K Gold Lantern 75cm</span>
+            <span>October 4,2024</span>
+            <span>Isfahan International Exhibition: Isfahan Province, Isfahan, Isfahan East Ring Expy, JQ4J+79C, Iran</span>
+            <span>start price from:€694.40</span>
           </div>
         </div>
         <div>
-          <img src="./carpet img/Carpet9.jpg" alt="Carpet" />
+          <img src="./Lighting img/Lighting9.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Wall Tulip</span>
+            <span>Pair of wall tulip lamps</span>
+            <span>October 4,2024</span>
+            <span>Isfahan International Exhibition: Isfahan Province, Isfahan, Isfahan East Ring Expy, JQ4J+79C, Iran</span>
+            <span>start price from:€542.00</span>
           </div>
         </div>
         <div>
-          <img src="./carpet img/Carpet10.jpg" alt="Carpet" />
+          <img src="./Lighting img/Lighting10.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Gold Lantern</span>
+            <span>Dutch Rose Tulip 18K Gold Lantern Lamp 75cm</span>
+            <span>december 6, 2024</span>
+            <span>Tabriz International Exhibition Center:: East Azerbaijan Province, Tabriz, Tabriz Int. Exhib. Rd, 2CR7+FXM, Iran</span>
+            <span>start price from:€522.00</span>
           </div>
         </div>
         <div>
-          <img src="./carpet img/Carpet11.jpg" alt="Carpet" />
+          <img src="./Lighting img/Lighting11.jpg" alt="Lighting" />
           <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
-          </div>
-        </div>
-        <div>
-          <img src="./carpet img/Carpet12.jpg" alt="Carpet" />
-          <div>
-            <span>name</span>
-            <span>details</span>
-            <span>date</span>
-            <span>place</span>
-            <span>start price</span>
+            <span>Glass Lantern</span>
+            <span>Blue glass lantern</span>
+            <span>december 23, 2024</span>
+            <span>International exhibition of Qom province:Highway, Qom, Tehran, No. 1, International Exhibition of Qom province, Iran</span>
+            <span>start price from:€184.06</span>
           </div>
         </div>
       </div>
