--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
           <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
           <span class="Carpet">Carpet</span>
         </a>
-        <a href="#">
+        <a href="./Lighting.html" target="_blank">
           <img src="./img/lighting-home page.jpg" alt="Persian lighting" />
           <span class="lighting">lighting</span>
         </a>
-        <a href="#">
+        <a href="./Jewellery.html" target="_blank">
           <img src="./img/Jewellery-home-page.jpg" alt="Persian Jewellery" />
           <span class="Jewellery">Jewellery</span>
         </a>
-        <a href="#">
+        <a href="#" target="_blank">
           <img src="./img/home-page-carpet.jpg" alt="Persian Carpet" />
           <span>Carpet</span>
         </a>
@@ -157,7 +157,7 @@
         <h2>sold out</h2>
         <div>
           <div class="sol">
-            <img src="./img/light1.jpg" alt="light" />
+            <img src="./carpet img/tablo farsh.jpg" alt="light" />
             <span>name</span>
             <span>date of sold</span>
             <span>last price</span>
