added the table of Carpet page

--- a/Decoration.html
+++ b/Decoration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jewellery - Iranian Antiques Auction</title>
+    <title>Decoration - Iranian Antiques Auction</title>
     <link rel="stylesheet" href="./Jewellery.css" />
   </head>
   <body>
@@ -29,12 +29,9 @@
       <a href="#sold">Sold out</a>
     </nav>
     <main>
-      <div class="firstmain">
-        <div>
-          <h2>Iranian</h2>
-          <h2>Jewellery</h2>
-        </div>
-        <img src="./Lighting img/Lighting-img-main.jpg" alt="lighting" />
+      <div>
+        <h2></h2>
+        <img src="" alt="" />
       </div>
       <div>
         <div>
