--- a/Carpet.html
+++ b/Carpet.html
@@ -148,6 +148,86 @@
           </div>
         </div>
       </div>
+      <section class="newstable" id="newstable">
+        <table>
+          <thead>
+            <tr>
+              <th>order</th>
+              <th>Name</th>
+              <th>Description</th>
+              <th>applicants</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Nafas Carpet</td>
+              <td>2 Meter Qom Hand-Knotted Persian Runner Carpet Model Nafas<a href="#">more</a></td>
+              <td>11</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Red Toranj Carpet</td>
+              <td>Persian Carpet Intricately Hand-Knotted Medallion Wool Red Toranj<a href="#">more</a></td>
+              <td>48</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Naeen Toranj Carpet</td>
+              <td>Authentic Persian Silk Carpet Hand-Knotted in Naeen Lachak Toranj Red<a href="#">more</a></td>
+              <td>68</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Yas Carpet</td>
+              <td>Persian Silk Carpet Hand-Knotted with Medallion Design Yas<a href="#">more</a></td>
+              <td>53</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>Sahand Carpet</td>
+              <td>Persian Wool Carpet Hand-Knotted with Medallion design Sahand<a href="#">more</a></td>
+              <td>31</td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td>Nomadic capet</td>
+              <td>Persian Carpet Hand-Knotted Model Nomadic<a href="#">more</a></td>
+              <td>16</td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td>Tangerine carpet</td>
+              <td>Persian Carpet Hand-Knotted with Toranj & Medallion Design<a href="#">more</a></td>
+              <td>57</td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td>Bakhtiari carpet</td>
+              <td>Authentic Persian Carpet with Wool Hand-Knotted in Chaharmahal & Bakhtiari<a href="#">more</a></td>
+              <td>33</td>
+            </tr>
+            <tr>
+              <td>9</td>
+              <td>Tabrize Carpet</td>
+              <td>Persian Carpet Hand-Knotted Tabriz Wool Carpet Messi<a href="#">more</a></td>
+              <td>24</td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>Toranj Mahi Carpet</td>
+              <td>Persian Carpet Intricately Hand-Knotted Medallion Wool Toranj Mahi<a href="#">more</a></td>
+              <td>26</td>
+            </tr>
+            <tr>
+              <td>11</td>
+              <td>Dark Color Carpet</td>
+              <td>Persian Carpet Intricately Hand-Knotted Medallion Wool Dark Color<a href="#">more</a></td>
+              <td>22</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
     <footer>
       <div class="foo">
