--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <span>Carpet</span>
         </a>
       </section>
-      <!-- top button -->
+      <a href="#" class="top"><span>Top</span></a>
       <section class="entemail" id="entemail">
         <label for="email">Join our mailing list</label>
         <form>
